[package]
name = "rust_bin_reloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
go-parse-duration = "0.1.1"
notify = "6.1.1"
libc = "0.2.155"
log = "0.4.21"
simplelog = "0.12.2"

[build-dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
clap-markdown = "0.1.3"
go-parse-duration = "0.1.1"